--- a/templates/finalizedstate.html
+++ b/templates/finalizedstate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang = 'en' xmins = "http://www.w3.org/1999/xhtml" style="width = auto;">
-<meta http-equiv ="Content-type" content="text/html;charset=utf-8">
+<meta http-equiv ="Content-type" content="text/html" charset= "utf-8">
 <head>
 	<link rel="shortcut icon" type="image/x-icon" href="/static/images/argus.png">
 	<meta charset = "utf-8"/>
@@ -27,14 +27,22 @@
 		border-spacing: 0;
 	}
 	</style>
+	<img src="https://fontmeme.com/permalink/170829/c0e1bd8dac7cfed80753e283cc729a7d.png" alt="world-of-warcraft-font" border="0" align="center">
 </head>
 <body class = "container-fluid bg-1">
-<table>
-{% for row in done %}
-    <tr>
-        <td>{{row}}<br/><br/></td>
-    </tr>
-{% endfor %}
-</table>
+<div style = "background-color: black; color:green; padding: 20px; opacity: 0.5; margin-right: -15px; margin-left: -15px;" >
+	<table>
+	{% for row in done %}
+		<tr>
+			<td>{{row}}<br/><br/></td>
+		</tr>
+	{% endfor %}
+	</table>
+</div>
 </body>
+<footer>
+	<div style = "color: green; opacity: 0.5; text-align: center;">
+		<p>&copy;HK Productions 2017 <br> All the information used was gathered from multiple websites (wowwiki, wowpedia, and wowprogress, respectively), which were cited at the top of the page via links.<br>Special thanks to fontmeme.com for allowing me to not spend hours in gimp for a title sequence!</p>	
+	</div>
+</footer>
 </html>
