More slight updates!
Basically all i could do now is update the database!

--- a/templates/finalizedstate8.html
+++ b/templates/finalizedstate8.html
@@ -10,7 +10,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<style>
 	.bg-1{
-		background-image: url('/static/images/catawallpaper.jpg');
+		background-image: url('/static/images/wodwallpaper.jpg');
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		-webkit-background-size: cover;
@@ -79,7 +79,7 @@
 	}
 	
 	aside:hover {
-		background: #ff0000;
+		background: #610B0B;
 	}
 	</style>
 	
@@ -92,7 +92,7 @@
 	<div4>
 	<div5>
 		<center>
-			<font size = "6" color="red">
+			<font size = "6" color="#610B0B">
 				<script> document.write(new Date().toLocaleDateString()); </script>
 			</font>
 		</center>
@@ -124,7 +124,7 @@
 		</a>
 	</aside>
 </div>
-<div style = "background-color: black; color:red; padding: 20px; opacity: 0.5; margin-right: -15px; margin-left: -15px;" >
+<div style = "background-color: black; color:red; padding: 20px; opacity: 0.8; margin-right: -15px; margin-left: -15px;" >
 	<table>
 	{% for row in done %}
 		<tr>
@@ -136,7 +136,7 @@
 </body>
 
 <footer class = "footer">
-	<div class ="footer_contents" style = "background-color: black; margin-right: -15px; margin-left:-15px; color: red; opacity: 0.5; text-align: center; padding-bottom: 1px;">
+	<div class ="footer_contents" style = "background-color: black; margin-right: -15px; margin-left:-15px; color: red; opacity: 0.8; text-align: center; padding-bottom: 1px;">
 		<p>&copy;HK Productions 2017 <br> All the information used was gathered from multiple websites (wowwiki, wowpedia, and wowprogress, respectively), which were cited at the top of the page via links.<br>Special thanks to fontmeme.com for allowing me to not spend hours in gimp for a title sequence!</p>	
 	</div>
 </footer>
