Updated files and database
also fixed some templates.

--- a/templates/finalizedstate6.html
+++ b/templates/finalizedstate6.html
@@ -123,8 +123,8 @@
 			</div>
 		</a>
 	</aside>
-</div>
-<div style = "background-color: black; color:Lime; padding: 20px; opacity: 0.8; margin-right: -15px; margin-left: -15px;" >
+</div> // padding-bottom here will increase the height of the page while retaining its form.
+<div class = "body-home" style = "background-color: black; color:Lime; padding: 20px; padding-bottom: 100px; opacity: 0.8; margin-right: -15px; margin-left: -15px;" >
 	<table>
 	{% for row in done %}
 		<tr>
